--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "express": "^4.16.3",
     "lodash": "^4.17.11",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "2.1.5"
+    "react-dom": ">=16.4.2",
+    "react-scripts": "2.1.5",
+    "react-dev-utils": ">=5.0.2",
+    "merge": ">=1.2.1",
+    "hoek": ">=4.2.1"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0"
+    "concurrently": "^4.1.0",
+    "url-parse": ">=1.4.3",
+    "webpack-dev-server": ">=3.1.11"
+    
   },
   "scripts": {
     "start": "concurrently \"node ./server.js\" \"react-scripts start\"",
